# bode-bench

./: .gitattributes  .gitignore  AGENT_BRIEF.md  ARCHITECTURE.md  CLAUDE.md  CORE_HARDENING.md  DECISION_RULES.md  FUTURE_PLANS_AND_IDEAS.md  HANDOFF.md  MEMORY.md  PLAN_NOTES_AND_SESSIONS.md  POWER_USER_UX.md  PROCESSING_POLICY.md  PROJECT.md  README.md  REFINEMENT.md  REVIEW_BRIEF.md  ROADMAP.md  RUNTIME_CONTRACTS.md  STARTUP_RUNBOOK.md  TASKS.md  UX_PRINCIPLES.md
.github/workflows/: app-build.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  constants.ts  index.css  main.tsx
app/src/audio/: analysisConfig.test.ts  analysisConfig.ts  analysisFrameBufferPool.test.ts  analysisFrameBufferPool.ts  analysisRuntime.test.ts  analysisRuntime.ts  analysisWorker.ts  analysisWorkerClient.test.ts  analysisWorkerClient.ts  analysisWorkerProtocol.test.ts  analysisWorkerProtocol.ts  displayMode.ts  engine.ts  frameAnalysis.test.ts  frameAnalysis.ts  frameBus.test.ts  frameBus.ts  loadPolicy.test.ts  loadPolicy.ts  scrollSpeed.ts  stretchNode.ts
app/src/controls/: AnalysisConfigPopover.tsx  ClipExportStrip.tsx  DiagnosticsLog.tsx  DisplayOptionsBar.tsx  HotkeyOverlay.tsx  (+15 more)
data/processed/: suite1_prelude.json
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: prepare-share.ps1  serve-share.ps1
desktop/share/: index.html
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
scripts/: export_events.py  parse_scores.py  probe_audio.py
(+83 files in other folders)
