[package]
name = "scientific-listening-instrument"
version = "0.1.1"
description = "Local-first scientific listening instrument and media analysis console"
authors = ["Mitchell Burton"]
license = ""
repository = ""
homepage = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scientific_listening_instrument_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
